--- a/themes/light/layout/_partial/comment.ejs
+++ b/themes/light/layout/_partial/comment.ejs
@@ -1,4 +1,4 @@
-<% if (page.comments){ %>
+﻿<% if (page.comments){ %>
 
 <nav id="pagination" >
     <% if (page.prev) { %>
@@ -12,7 +12,7 @@
 
 <section id="comment">
   <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div>
+	<div class="ds-thread" data-thread-key="<%= page.path %>" data-title="<%= page.title %>" data-url="<%= page.permalink %>"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
