add baidu tuiguang

--- a/themes/light/layout/_partial/after_footer.ejs
+++ b/themes/light/layout/_partial/after_footer.ejs
@@ -25,3 +25,9 @@ var disqus_shortname = '<%= config.disqus_shortname %>';
 })(jQuery);
 </script>
 <% } %>
+
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F79422e1e0a95c1774f227dadecc2ce8f' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
