add totop and widgt archive

--- a/themes/light/layout/_partial/after_footer.ejs
+++ b/themes/light/layout/_partial/after_footer.ejs
@@ -31,3 +31,6 @@ var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " 
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F79422e1e0a95c1774f227dadecc2ce8f' type='text/javascript'%3E%3C/script%3E"));
 </script>
 
+<%- partial('totop') %>
+<script src="<%- config.root %>js/totop.js"></script>
+
