update about page

--- a/themes/light/layout/_widget/blogroll.ejs
+++ b/themes/light/layout/_widget/blogroll.ejs
@@ -2,10 +2,9 @@
 <h3 class="title">友情链接</h3>
 <ul class="entry">
 <li><a href="http://www.nanjinglizhi.cn/" title="李志官网">李志官网</a></li>
-<li><a href="http://www.cppblog.com/vczh/" title="vczh博客">轮子哥(vczh)博客</a></li>
 <li><a href="http://www.lihuia.com/" title="Lihui's Blog">像猫小萌一样飞驰</a></li>
-<li><a href="http://macshuo.com/" title="mactalk">MacTalk-池建强的随想录</a></li>
 <li><a href="http://coolshell.cn/" title="coolshell">酷壳CoolShell</a></li>
 <li><a href="https://www.zybuluo.com/mdeditor" title="mdeditor">在线 Markdown 编辑阅读器</a></li>
+<li><a href="https://stackedit.io" title="stackedit">在线 Markdown 编辑阅读</a></li>
 </ul>
 </div>
